5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1637_1054.log
== TEST (2019-04-09 10:50:11) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if = (x = 2x + y = 3):
if = (y = 2x + y = 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if = (x = 2x + y = 3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:35) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if (x = 2x + y = 3):
if (y = 2x + y = 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (x = 2x + y = 3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:41) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if (x = 2x + y = 3):
if (y = 2x + y = 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (x = 2x + y = 3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:58) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if (x + 2x + y = 3):
if (y + 2x + y = 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (x + 2x + y = 3):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:28) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if (x + 2x + y == 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (x + 2x + y == 3):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:21) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if (2 * x + y == 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:52:33) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))

if (2 * x + y == 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.165542
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
